--- a/css/styles.css
+++ b/css/styles.css
@@ -685,6 +685,7 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 margin-top: 8px;
 text-align: center;
+margin-bottom: 8px;
 
 }
 .type-title-second {
@@ -697,6 +698,37 @@ text-align: center;
     padding-bottom: 32px;
 }
 
+.sohl-description-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    
+}
+
+.description-sohl-two {
+    width: 40px;
+    height: 40px;
+}
+.sohl-title-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4D5AE5;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sohl-title-icon {
+    
+}
+
+
+
+
+
+
+
 
 
 
@@ -707,6 +739,8 @@ text-align: center;
     background-color: #2E2F42;
     padding-top: 100px;
     padding-bottom: 100px;
+    
+   
     
   
     
@@ -748,4 +782,39 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 width: 264px;
 margin-top: 16px;
+}
+
+.description-text-three {
+    color: #FFFFFF;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+text-align: center;
+margin-bottom: 16px;
+
+
+}
+
+.solt-description-list {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+   
+}
+
+.description-solt-two {
+    width: 40px;
+    height: 40px;
+}
+.solt-title-link {
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.solt-title-icon {
 }
