--- a/css/styles.css
+++ b/css/styles.css
@@ -724,6 +724,46 @@ margin-bottom: 8px;
     
 }
 
+.custom {
+    
+}
+.container-custom {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+.custom-second {
+    text-align: center;
+    margin-bottom: 72px;
+    font-weight: 700;
+font-size: 36px;
+line-height: 1.11;
+letter-spacing: 0.02em;
+}
+.custom-company {
+    display: flex;
+    gap: 24px;
+}
+
+.custom-item {
+    width: calc((100%-144px)/6);
+    height: 88px;
+}
+.custom-link {
+    width: 100%;
+    height: 100%;
+    border: 1px solid #8E8F99;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+}
+
+.custom-icons {
+}
+
+
+
+
 
 
 
