--- a/css/styles.css
+++ b/css/styles.css
@@ -537,16 +537,26 @@ margin-top: 48px;
 display: block;
 margin: 0 auto;
 
+}
 
 
+.container-text-tape{
+
+    width: 1128px;
+height: 224px;
+display: flex;
+
+
+}
 
    
-}
+
 .description {
     
     
     display: flex;
     gap: 24px;
+    
    
 
 }
@@ -554,6 +564,33 @@ margin: 0 auto;
 
     
 }
+
+
+.custom-item-strategy {
+
+    
+}
+.custom-link-strategy {
+    width: 100%;
+    height: 100%;
+    height: 112px;
+    width: 264px;
+    background: #F4F4FD;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+}
+
+.custom-icons-strategy {
+
+    margin-left: 112.14px;
+
+}
+
+
+
+
 .tape-description {
     color: #2E2F42;
     font-family: 'Roboto';
@@ -725,11 +762,12 @@ margin-bottom: 8px;
 }
 
 .custom {
+    padding-top: 120px;
+    padding-bottom: 120px;
     
 }
 .container-custom {
-    padding-top: 120px;
-    padding-bottom: 120px;
+    
 }
 .custom-second {
     text-align: center;
@@ -742,11 +780,13 @@ letter-spacing: 0.02em;
 .custom-company {
     display: flex;
     gap: 24px;
+    margin-left: 156px;
 }
 
 .custom-item {
-    width: calc((100%-144px)/6);
+    width: calc((100%-120px)/6);
     height: 88px;
+    width: 168px;
 }
 .custom-link {
     width: 100%;
@@ -758,8 +798,21 @@ letter-spacing: 0.02em;
     justify-items: center;
 }
 
-.custom-icons {
+.custom-icons{
+   margin-left: 32px;
+
 }
+
+.custom-link:hover {
+    border-color:#4D5AE5;
+
+}
+
+
+
+
+
+
 
 
 
