--- a/css/styles.css
+++ b/css/styles.css
@@ -203,8 +203,8 @@ display: flex;
     
 } 
 
-.app:hover{
-    background: #F4F4FD;
+.app:focus{
+    background: #4D5AE5;
     
 }
 
@@ -276,15 +276,18 @@ height: 48px;
 }
 
 .type-portfolio {
+ 
 
 }
 
 .type-portfolio:hover {
-    background: linear-gradient(0deg, rgba(77, 90, 229, 0.1), rgba(77, 90, 229, 0.1)), url(4074365.jpg);
-background-blend-mode: soft-light, normal;
-mix-blend-mode: normal;
-background-blend-mode: soft-light;
-mix-blend-mode: normal;
+    border: 1px solid #E7E9FC;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+.type-portfolio:focus {
+    border: 1px solid #E7E9FC;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .type-text{
@@ -901,6 +904,7 @@ letter-spacing: 0.02em;
 .custom-icons{
     fill:currentColor;
     color:  #8E8F99;
+    display: flex;
    
 
 }
@@ -910,13 +914,18 @@ letter-spacing: 0.02em;
 
 }
 
-.custom-icons:hover {
-    color-icons: #404BBF;
+.custom-link:focus {
+    border-color:#4D5AE5;
+
+}
+
+.custom-link:hover {
+    color: #404BBF;
    
 }
 
-.custom-icons:focus {
-    fill: #404BBF;
+.custom-link:focus {
+    color: #404BBF;
 }
 
 
